syntax = "proto3";

package musicplayer.v1;
option go_package = "./musicplayerpb";

service MusicplayerService {
	rpc GetAlbumList(GetAlbumListRequest) returns (GetAlbumListResponse);
	rpc GetAlbum(GetAlbumRequest) returns (GetAlbumResponse);
}

message GetAlbumListRequest {	
}
message MusicAlbumInfo {
	string identifier = 1;
	string metadata = 2;
	string createdUserId = 3;
}
message GetAlbumListResponse {
	repeated MusicAlbumInfo musicAlbums = 1;
}

message GetAlbumRequest {
	string identifier = 1;
}
message GetAlbumResponse {
	MusicAlbumInfo musicAlbum = 1;
}